--- a/index.html
+++ b/index.html
@@ -64,6 +64,56 @@
 
         </header>
 
+        <!-- /* tarjetas */ -->
+        <section id="tarjeta">
+            <div class="wrapper">
+                <div class="row px-3 mt-5 mb-5 row justify-content-center ">
+                    <div class=" card col-12 col-sm-5 col-md-3 p-lg-4" style="">
+                        <img src="assets/img/card1.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                        <h5 class="card-title">Loren ipsum dolor sit aamet</h5>
+                        <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+                        </div>
+                        <ul class="list-group list-group-flush">
+                        <li class="list-group-item text-left fw-light fs-6">Loren ipsum dolor sit aamet. consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+                        </ul>
+                    </div>
+
+                    <div class="card card col-12 col-sm-5 col-md-3 p-lg-4" style="">
+                        <img src="assets/img/card2.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                        <h5 class="card-title">Loren ipsum dolor sit aamet</h5>
+                        <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+                        </div>
+                        <ul class="list-group list-group-flush">
+                        <li class="list-group-item text-left fw-light fs-6">Loren ipsum dolor sit aamet. consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+                        </ul>
+                    </div>
+
+                    <div class="card card col-12 col-sm-5 col-md-3 p-lg-4" style="">
+                        <img src="assets/img/card3.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                        <h5 class="card-title">Loren ipsum dolor sit aamet</h5>
+                        <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+                        </div>
+                        <ul class="list-group list-group-flush">
+                        <li class="list-group-item text-left fw-light fs-6">Loren ipsum dolor sit aamet. consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+                        </ul>
+                    </div>
+
+                    <div class="card card col-12 col-sm-5 col-md-3 p-lg-4" style="">
+                        <img src="assets/img/card4.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                        <h5 class="card-title">Loren ipsum dolor sit aamet</h5>
+                        <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+                        </div>
+                        <ul class="list-group list-group-flush">
+                        <li class="list-group-item text-left fw-light fs-6">Loren ipsum dolor sit aamet. consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
 
 
 
