incorpiracion modulo footer todo en css

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     </button>
                 </div>
         </header>
-        
+
             <section id="quienes_Somos">
                 <div class="container bg-black mt-5">    
                     <div class=" row text-white text-center " >
@@ -180,10 +180,25 @@
                             <button type="button" class=" btn-success px-4 py-1 text-white letra bg-info fw-medium">Enviar</button>  
                         </div>    
                 </div>
-
-
             </section>
 
+            <footer class="text-white bg-info mt-4 mb-4 ">
+                <div class="d-none d-md-block py-3  ">
+                    <div class=" container d-flex justify-content-around  align-items-center"> 
+                        <p class="fs-4 fs-2 display-6 fw-light">VIAJES DE CHILE</p>
+                        <div class="d-flex justify-content-end d-flex gap-3 link-opacity-10-hover">
+                            <p><a class="fa-brands fa-square-github fa-2x text-white "
+                                href="https://github.com/" target="_blank"></a></p>
+                            <p><a class="fa-brands fa-twitter fa-2x text-white" 
+                                href="https://x.com/" target="_blank"></a></p>                        
+                            <p><a class="fa-brands fa-linkedin fa-2x text-white" 
+                                href="https://www.linkedin.com/" target="_blank"></a></p>     
+                            <p><a class="fa-brands fa-facebook fa-2x text-white " 
+                                href="https://facebook.com/"  target="_blank"></a></p>     
+                        </div>    
+                    </div>
+                </div>
+            </footer>
  
 <!-- js bootsstrap -->
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" 
