respaldo modelo completo con css

--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
                             <img src="assets/img/card1.jpg" class="card-img-bottom " alt="" >
                             <div class="card-body bg-info">
                                     <h5  class="card-titles fw-light text-white">Loren ipsum dolor sit aamet</h5>
-                                    <p class="card-text text-white">Loren ipsum dolor sit aamet. consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                    <p class="card-text text-white">Loren ipsum dolor sit aamet. consectetur adipisicing elit, 
+                                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                             </div>
                         </div>
 
@@ -133,7 +134,8 @@
                             <img src="assets/img/card2.jpg" class="card-img-top " alt="" width="57" height="">
                             <div class="card-body bg-info">
                                 <h5  class="card-titles fw-light bg-info text-white">Consectetur adipisicing elit</h5>
-                                <p class="card-text bg-info text-white">Loren ipsum dolor sit aamet. consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                <p class="card-text bg-info text-white">Loren ipsum dolor sit aamet. consectetur adipisicing elit,
+                                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                             </div>
                         </div>
 
@@ -141,7 +143,8 @@
                             <img src="assets/img/card3.jpg" class="card-img-top" alt="">
                             <div class="card-body bg-info">
                                 <h5  class="card-titles fw-light bg-info text-white">Sed do eiusmod tempor incididunt ut labore</h5>
-                                <p class="card-text bg-info text-white">Loren ipsum dolor sit aamet. consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                <p class="card-text bg-info text-white">Loren ipsum dolor sit aamet. consectetur adipisicing elit,
+                                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                             </div>
                         </div>
 
@@ -149,7 +152,8 @@
                             <img src="assets/img/card4.jpg" class="card-img-top" alt="">
                             <div class="card-body bg-info">
                                 <h5  class="card-titles fw-light bg-info text-white">Ut enim ad minim veniam</h5>
-                                <p class="card-text bg-info text-white">Loren ipsum dolor sit aamet. consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                <p class="card-text bg-info text-white">Loren ipsum dolor sit aamet. consectetur adipisicing elit, 
+                                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                             </div>
                         </div>
 
