--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
         </div>
 
 </header>
-          <!-- /* Quienes somos   cambio de color en titulo*/ -->
+          <!-- /* Quienes somos  con doble click cambio de color en titulo*/ -->
 <section id="quienes_Somos">
   <div class="container bg-black mt-5">    
-      <div class=" row text-white text-center " >
-          <p class=" fs-4 fs-2 avion"> ¿QUIENES SOMOS? </p>  
+      <div class=" row text-white text-center " data-bs-title="Enviar por Correo " >
+          <p class=" fs-4 fs-2 cambiored"> ¿QUIENES SOMOS? </p>  
           <p class="px-4"> <HR size="5" width="97%" align="center">  </p> 
       </div>
       <div class="row  justify-content-around ">
@@ -111,7 +111,7 @@
   </div>
 </section>
 
-          <!-- /* Destacados   Ocultamiento de tarjetas */ -->
+          <!-- /* Destacados   con click Ocultamiento de tarjetas */ -->
           <section id="Destacados">
             <div id="clickocul" class=" row text-white  text-center mt-4">
                 <p class=" fs-4 fs-2"> DESTACADOS </p>  
@@ -150,11 +150,11 @@
                 </div>
             </div>
         </section>
-          <!-- /* Contato   cambio de color en titulo y envio de correo*/ -->
+          <!-- /* Contato   con click cambio de color en titulo y envio de correo*/ -->
         <section id="Contacto"  class="bg-black">
           <div class= "container  bg-contacto text-white d-md-block py-2 mt-5 ">
               <div class=" row text-white  text-center ">
-                  <p class=" fs-4 fs-2 avion"> CONTACTO </p>  
+                  <p class=" fs-4 fs-2 cambioamarillo"> CONTACTO </p>  
                   <p class="px-4 mb-3"> <HR size="5" width="97%" align="center">  </p> 
               </div>   
                   <div class="mb-3">
